--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,51 @@
-.App {
+#searchb {
+  padding: 15px;
+  position: absolute;
+  top: 40%;
+  left: 43%;
+  -ms-transform: translateX(-50%) translateY(-50%);
+  -webkit-transform: translate(-50%,-50%);
+  transform: translate(-50%,-50%);
+  transform: scale(2);
+  box-shadow: white;
+}
+
+
+
+#icon {
+  margin: 0.5%;
+  height: 75px;
+  width: 75px;
+  top: 0px;
+}
+
+#about {
+  position:absolute;
+  bottom:0px;
+  right:25%;
+  left:48%;
+}
+
+#content {
+  color: white;
+  position: fixed;
+  top: 60%;
+  left: 20%;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+/* #heady {
   color: white;
-}
+  width: 400px;
+  height: 175px;
+  position: relative;
+  left: 39%;
+  top: 280px;
+} */
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#navbar {
+  margin: 0.5%;
+  height: 75px;
+  width: 75px;
+  top: 0px;
 }
