--- a/src/App.css
+++ b/src/App.css
@@ -49,3 +49,26 @@
   width: 75px;
   top: 0px;
 }
+
+.container {
+  width: 300px;
+  overflow: hidden;
+  box-shadow: 0px 0px 15px -5px;
+  transition: 0.5s;
+  animation: ease-in;
+}
+
+.container:hover {
+  transform: scale(1.1);
+  box-shadow: 0px 0px 15px 0px;
+}
+
+.img-container {
+  overflow: hidden;
+  height: 200px;
+}
+
+.container-content {
+  margin: 1rem;
+  margin-top: 0.5rem;
+}
